--- a/step14_CI_CD_pipeline/DevOps_Stephan/Step_1_Deploy_React_App_CICD/step_1_backend_cdk/package.json
+++ b/step14_CI_CD_pipeline/DevOps_Stephan/Step_1_Deploy_React_App_CICD/step_1_backend_cdk/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "step02_ci_cd_pipeline_update_cdk_template",
+  "name": "step_1",
   "version": "0.1.0",
   "bin": {
-    "step02_ci_cd_pipeline_update_cdk_template": "bin/step02_ci_cd_pipeline_update_cdk_template.js"
+    "step_1": "bin/step_1.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk",
-    "cdk synth": "cdk synth"
+    "cdk": "cdk"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.12.7",
-    "aws-cdk": "2.142.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
+    "aws-cdk": "2.142.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.142.1",
     "constructs": "^10.0.0",
-    "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21"
   }
 }
